<resources>
    <string name="app_name">群芳阁</string>
    <string name="sale">销售</string>
    <string name="store">库存</string>
    <string name="account">我的</string>
    <string name="addSaleItem">手动输入</string>
    <string name="scanBarCode">扫码</string>
    <string name="typing">请输入...</string>
    <string name="barCode">产品码</string>
    <string name="itemTitle">产品名称</string>
    <string name="unitPrice">单价</string>
    <string name="amount">数量</string>
    <string name="productInfo">产品信息</string>
    <string name="orders">订单</string>
    <string name="submit">提交</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="action_done">完成</string>
    <string name="totalPrice">总价:%1$s</string>
    <string name="submitSuccess">提交成功</string>
    <string name="submitFailed">提交失败:</string>
    <string name="notConnectInternet">未连接网络</string>
    <string name="nullNotAllowed">请输入%1$s</string>
    <string name="curMonTotalSale">本月销售额</string>
    <string name="curDayTotalSale">今日销售额:%1$s</string>
    <string name="goTo">转到</string>
    <string name="title_activity_login">登录</string>
    <string name="changePassword">修改密码</string>
    <string name="logout">退出当前用户</string>
    <string name="button_ok">OK</string>
    <string name="msg_camera_framework_bug">摄像头故障</string>
    <string name="viewfinderview_status_text1">将二维码/条码放入取景框内</string>
    <string name="viewfinderview_status_text2">即可自动扫描</string>

    <!-- Strings related to login -->
    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_username">用户名无效</string>
    <string name="error_invalid_password">密码无效</string>
    <string name="error_incorrect_password">用户名或者密码不正确</string>
    <string name="error_field_required">请输入值</string>
</resources>
