<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sale_tab"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.qfg.qunfg.SaleActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="本月销售额"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:background="@color/colorBlue"/>
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:text="123,100.00"
            android:textSize="30dp"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:background="@color/colorBlue"/>
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="今日销售额:1,100.00"
            android:freezesText="true"
            android:textColor="@android:color/white"
            android:gravity="center_vertical|right"
            android:background="@color/colorBlue"
            android:elevation="5dp" />
        <android.support.v7.widget.ButtonBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/scanBarCode"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/addSaleItem"
                android:onClick="OnAddSaleItem"/>
        </android.support.v7.widget.ButtonBarLayout>
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/total_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:freezesText="true"
            android:text="0.00"
            android:gravity="center_vertical|right"/>
        <View style="@style/Divider"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/my_recycler_view"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@android:color/white"/>
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"/>
        <android.support.v7.widget.ButtonBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/submit"
                android:onClick="onSubmit"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:onClick="onCancel"/>
        </android.support.v7.widget.ButtonBarLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>